samples/_failures_safe/1761521337_e8e3e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c1ed702.c: In function ‘main’:
./samples/SAFE/__tmp_1c1ed702.c:187:5: error: expected declaration or statement at end of input
  187 |     printf("Tokens found: %d\n", token_count);
      |     ^~~~~~
